<resources>
    <string name="app_name">Administrasi UNS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kelompok 5</string>
    <string name="nav_header_subtitle">kelompok5asik@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informasi_keuangan">Informasi Keuangan</string>
    <string name="foto_fakultas">foto fakultas</string>
    <string name="fakultas">Fakultas</string>
    <string-array name="faculty_name">
        <item>Fakultas Ilmu Budaya</item>
        <item>Fakultas Hukum</item>
        <item>Fakultas Ekonomi dan Bisnis</item>
        <item>Fakultas Ilmu Sosial dan Politik</item>
        <item>Fakultas Kedokteran</item>
        <item>Fakultas Pertanian</item>
        <item>Fakultas Teknik</item>
        <item>Fakultas Keguruan dan Ilmu Pendidikan</item>
        <item>Fakultas Matematika dan IPA</item>
        <item>Fakultas Seni Rupa dan Desain</item>
        <item>Fakultas Keolahragaan</item>
        <item>Fakultas Teknologi Informasi dan Sains Data</item>
        <item>Fakultas Psikologi</item>
        <item>Sekolah Vokasi</item>
    </string-array>
    <string name="x_major">x major</string>
    <string name="description">description</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliquam vitae leo nec viverra. Aliquam erat volutpat. Phasellus ultricies feugiat neque nec sollicitudin. Vestibulum vel massa feugiat, tempus nulla ut, gravida magna. In ut sem tincidunt, suscipit metus vitae, consequat eros. Duis porta sapien lorem, ac interdum dolor sollicitudin ullamcorper. Nam semper a mauris ut accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed nunc massa, blandit vel quam id, molestie commodo neque. Quisque sed tempor libero, eu molestie ante. Praesent risus lorem, congue non mollis sed, venenatis vitae odio. Etiam eget lacus id sem pellentesque imperdiet sed in urna. Praesent mattis ullamcorper tempor.</string>
    <string name="website">website</string>
    <string name="service">Service</string>
    <string-array name="service_name">
        <item>Layanan Akses Internet Wireless</item>
        <item>Permohonan Web Service (API) Baru</item>
        <item>Maintenance/Perbaikan Web Service (API)</item>
        <item>Layanan Lisensi Plugin dan Tema Wordpress Royal Elementor Expert</item>
        <item>Layanan Permohonan Email Instansi, Unit, Kegiatan dan Jurnal</item>
        <item>Pembukaan Blokir Akun Student, Staff dan Unit</item>
        <item>Aktivasi Email Single Sign On (SSO) Mahasiswa dan Staff</item>
        <item>Layanan Permohonan Lisensi Microsoft Office 365</item>
    </string-array>
    <string-array name="service_terms">
        <item>
            Jaringan Wireless di Lingkungan UNS\nJaringan Wireless dengan SSID UNS Solo atau Eduroam\n
        </item>
        <item>
            Permohonan Webservice Baru
        </item>
        <item>
            Maintenance/Perbaikan Web Service
        </item>
        <item>
            Pengajuan surat dengan detail\n
            Nama Domain\n
            Informasi PIC Domain\n
            Nama\n
            Nip/Nim\n
            Email SSO\n
            No HP aktif\n
        </item>
        <item>
            Lembaga yang mengajukan di bawah UNS\n
            Kegiatan yang disuport adalah kegiatan yang diselenggarakan oleh UNS.\n
        </item>
        <item>
            Email UNS berafiliasi ke Google License UNS.
        </item>
        <item>
            Untuk email @student.uns.ac.id\n
            - Memiliki NIM\n
            - Memiliki PIN terakhir (semester saat membuat Email) dari Bank\n
            - Memiliki nomor HP yg teregister di Siakad\n
            - Nomor HP dapat dikirimi Whatsapp\n

            Untuk email @staff.uns.ac.id\n
            - Memiliki NIP terdaftar di simpeg.uns.ac.id\n
            - Nomor HP teregister di simpeg\n
            - Nomor HP dapat dikirimi Whatsapp\n
        </item>
        <item>
            1. Layanan Microsoft Office 365 itu ada 2 jenis : layanan email 365 dengan free feature (meliputi one drive, microsoft office web version) dan layanan email 365 dengan free feature + aplikasi desktop microsoft office (jumlahnya terbatas 200 lisensi yang hanya untuk staf saja);\n
            2. Email yang disetujui hanya @staff (@student hanya dapat free feature), sedangkan @unit/@mail tidak perkenankan;\n
            3. Menyertakan NIP yang sesuai dengan email @staff (NIM mahasiswa untuk @student).\n
        </item>
    </string-array>
    <string-array name="service_procedure">
        <item>
            1. Unit Kerja Mengajukan Keluhan jaringan\n
            2. TIK Menerima keluhan jaringan \n
            3. TIK menganalisis Permasalahan \n
            4. TIK Mengirimkan analisis permasalahan Solusi dan menyelesaikan jika itu permasalahan ada di TIK \n
            5. Unit Kerja Menerima analisis permasalahan dan Solusi \n
            6. Unit Kerja Menganalisis anggaran untuk kebutuhan untuk penyelesaian masalah jika diperlukan \n
            7. Unit Kerja Koordinasi dengan TIK untuk pembagian tugas \n
            8. TIK Menerima pembagian tugas \n
            9. Unit Kerja Melakukan pengadaan baik barang maupun SDM Teknis jika dibutuhkan \n
            10. Unit Kerja Melaporkan ke TIK jika sdh selesai (solved) \n
        </item>
        <item>
              1. Unit Kerja Mengajukan Permohonan webservice disertai spesifikasi Web, kebutuhan storage per tahun disertai email PIC Web.\n
            2. TIK Menganalisis kebutuhan, menentukan authentifikasi webservice\n
            3. TIK Development webservice sesuai kebutuhan\n
            4. TIK Menguji coba webservice sesuai kebutuhan\n
            5. TIK Mengirimkan akun sesuai kebutuhan ke email PIC\n
            6. Unit Kerja Menerima Akun Web melalui email\n
            7. Unit Kerja Memanfaatkan webservice sesuai kebutuhan\n
            8. Unit Kerja Melakukan pengujian implementasi webservice\n
        </item>
        <item>
              1. Unit Kerja Mengajukan Keluhan webservice\n
            2. TIK Menerima keluhan webservice\n
            3. TIK Menganalisis Permasalahan\n
            4. TIK Mengirimkan analisis permasalahan Solusi dan menyelesaikan jika itu permasalahan ada di TIK\n
            5. Unit Kerja Menerima analisis permasalahan dan Solusi\n
            6. Unit Kerja Melakukan tindak lanjut atas analisis dan solusi yg diberikan.\n
            7. Unit Kerja Melakukan ujicoba tindak lanjut.\n
            8. Unit Kerja Melaporkan jika webservice sudah bisa digunakan scr normal.\n
        </item>
        <item>
              1. Dalam waktu 14 hari setelah menerima informasi email, lisensi harus segera diaktifkan\n
            2. Menggunakan tema "Royal Elementor Kit" by WP Royal dan menghapus tema lain yang tidak dipakai. jika terdeteksi tidak menggunakan tema tersebut maka lisensi akan dinonaktifkan\n
            3. Website harus selalu di update. apabila diketahui website offline selama lebih dari 1 minggu, maka TIK akan menonaktifkan lisensi\n
            4. Pengajuan lisensi hanya berlaku 1 kali dan tidak dapat digunakan untuk menjadi dasar untuk pengaktifan kembali apabila lisensi sudah di nonaktifkan\n
        </item>
        <item>
              1. Mengajukan surat\n
            2. Diverifikasi oleh admin\n
            3. Didisposisikan oleh Pimpinan ke Staff\n
            4. Dieksekusi oleh Staff\n
            5. Pemohon mendapatkan notifikasi email selesai\n
            6. Pemohon mendapatkan email mengenai akun email yang dimohon\n
        </item>
        <item>
              1. Pemohon mengajukan surat\n
            2. Proses Review oleh tim admin\n
            3. Proses pengajuan pengeluaran dari blokir\n
            4. Informasi ke pemohon untuk mencoba kembali\n
        </item>
        <item>
              1. Mengajukan via profil.uns.ac.id\n
            2. memasukkan NIP atau Email sesuai form online di profil.uns.ac.id\n
            3. Mengisikan 4 digit terakhir nomor HP yg telah teregister sesuai syarat\n
            4. Menerima Token melalui Whatsapp\n
            5. Mengisikan Token dalam aplikasi profil.uns.ac.id\n
            6. Mengisikan usulan username (buat yg mudah diingat)\n
            7. Mengisikan Password (Buat yg passphrase, tidak mudah ditebak tapi mudah diingat)\n
            8. Klik tombol Aktifkan email\n
        </item>
        <item>
              1. Mengajukan permohonan surat\n
            2. Tim administrasi mereview surat\n
            3. Tim Teknis mengekseskusi lisensi\n
            4. Pemohon mendapatkan notifikasi\n
        </item>
    </string-array>
    <string-array name="service_cost">
        <item>Rp 0</item>
        <item>Rp 0</item>
        <item>Rp 0</item>
        <item>Rp 0</item>
        <item>Rp 0</item>
        <item>Rp 0</item>
        <item>Rp 0</item>
        <item>Rp 0</item>
    </string-array>
    <string-array name="service_time">
        <item>1 hari</item>
        <item>1 hari</item>
        <item>1 hari</item>
        <item>14 hari</item>
        <item>2 hari</item>
        <item>2 hari</item>
        <item>1 hari</item>
        <item>2 hari</item>
    </string-array>
    <string name="syarat">Syarat :</string>
    <string name="prosedur">Prosedur</string>
    <string name="biaya">Biaya</string>
    <string name="waktu_pengerjaan">Waktu Pengerjaan</string>
    <string-array name="faculty_img">
        <item>@drawable/fib</item>
        <item>@drawable/fh</item>
        <item>@drawable/feb</item>
        <item>@drawable/fisip</item>
        <item>@drawable/fk</item>
        <item>@drawable/fp</item>
        <item>@drawable/ft</item>
        <item>@drawable/fkip</item>
        <item>@drawable/fmipa</item>
        <item>@drawable/fsrd</item>
        <item>@drawable/fkor</item>
        <item>@drawable/ftisd</item>
        <item>@drawable/fpsi</item>
        <item>@drawable/sv</item>
    </string-array>
    <string name="timeline">Timeline</string>
    <string name="waktu_pendaftaran_mahasiswa_baru">Waktu Pendaftaran Mahasiswa Baru</string>
    <string name="_30_mei_23_juni_2024">30 Mei - 23 Juni 2024</string>
    <string name="pendaftaran_online">Pendaftaran Online</string>
    <string name="pembayaran_biaya_pendaftaran">Pembayaran Biaya Pendaftaran</string>
    <string name="_20_23_juni_2024">20 – 23 Juni 2024</string>
    <string name="cetak_kartu_peserta">Cetak Kartu Peserta</string>
    <string name="_26_27_juni_dan_1_juli_2024">26 – 27 Juni dan 1 Juli 2024</string>
    <string name="simulasi_ujian">Simulasi Ujian</string>
    <string name="_3_4_juli_dan_6_juli_2024">3 – 4 Juli dan 6 Juli 2024</string>
    <string name="ujian">Ujian</string>
    <string name="_11_juli_2024">11 Juli 2024</string>
    <string name="pengumuman_hasil_seleksi">Pengumuman Hasil Seleksi</string>
    <string name="aplikasi_administrasi_uns">Aplikasi Administrasi UNS</string>
    <string name="foto_universitas">foto universitas</string>
    <string name="home_description">Selamat datang di aplikasi Administrasi Universitas Sebelas Maret (UNS). Aplikasi ini dirancang untuk memberikan kemudahan akses bagi seluruh civitas akademika UNS dalam memperoleh informasi dan layanan administrasi secara cepat dan efisien. Berikut adalah fitur-fitur utama yang tersedia dalam aplikasi ini:</string>
    <string name="buat_permintaan">Buat Permintaan</string>
    <string name="buat_keluhan">Buat Keluhan</string>
</resources>