<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.layanan.DetailServiceFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

<!--        <TextView-->
<!--            android:id="@+id/tv_service_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:textSize="32sp"-->
<!--            android:fontFamily="@font/poppins_semi_bold"-->
<!--            android:text="@string/service_name" />-->

        <TextView
            android:id="@+id/tv_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:text="@string/service_name"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_marginTop="24dp"
            android:background="@drawable/blue_rounded_background"
            android:padding="10dp"
            android:textColor="#3E4243"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/biaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_service_name"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/biaya" />

        <TextView
            android:id="@+id/tv_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/biaya"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/service_cost"/>

        <TextView
            android:id="@+id/waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cost"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/waktu_pengerjaan" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/waktu"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/service_time"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btn_permintaan"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3577f1"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textAllCaps="false"
            android:text="@string/buat_permintaan" />
        <Button
            android:id="@+id/btn_keluhan"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_permintaan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#f06548"
            android:fontFamily="@font/poppins_semi_bold"
            android:textAllCaps="false"
            android:text="@string/buat_keluhan" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="80sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_keluhan"
            android:src="@drawable/uns_logo"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
