<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.registrasi.WaktuPendaftaranDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeline"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black" />

        <!-- Subtitle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu_pendaftaran_mahasiswa_baru"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:textColor="@color/black" />

        <!-- Timeline -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <!-- Step 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/stepBackgroundColor"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/register"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/pendaftaran_online"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30_mei_23_juni_2024"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pendaftaran_online"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Line Separator -->
            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal" />

            <!-- Step 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/stepBackgroundColor"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/pembayaran"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/pembayaran_biaya_pendaftaran"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30_mei_23_juni_2024"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pembayaran_biaya_pendaftaran"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Line Separator -->
            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal" />

            <!-- Step 3 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/stepBackgroundColor"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/cetak"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/cetak_kartu_peserta"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_20_23_juni_2024"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cetak_kartu_peserta"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Line Separator -->
            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal" />

            <!-- Step 4 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/stepBackgroundColor"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/documents"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/simulasi_ujian"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_26_27_juni_dan_1_juli_2024"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/simulasi_ujian"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal" />

            <!-- Step 4 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/stepBackgroundColor"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/documents"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/ujian"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_4_juli_dan_6_juli_2024"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ujian"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:background="@color/black"
                android:layout_gravity="center_horizontal" />

            <!-- Step 4 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:background="@color/stepBackgroundColor"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/annoucement"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/pengumuman_hasil_seleksi"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_11_juli_2024"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pengumuman_hasil_seleksi"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>